--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="footer-lsit">
         <ul>
           <li><a href="#" class="btn">会社概要</a></li>
-          <li><a href="#" class="btn">お問い合わせ</a></li>
+          <li><a href="#" class="btn">お問い合わせto</a></li>
         </ul>
       </div>
     </footer>
